@@ -108,6 +108,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Used special page subpages in a few more places, instead of query parameters.
 * (bug 7758) Added wrapper span to "templates used" explanation to allow CSS
   styling (class="mw-templatesUsedExplanation").
+* Added {{#special:}} parser function, to give the local default title for 
+  special pages
 
 == Languages updated ==
 
